<?xml version="1.0"?>
<package format="2">
  <name>see_ultrasonic</name>
  <version>0.0.1</version>
  <description>Ultrasonic sensor reading publisher</description>
  
  <maintainer email="pizo@piz.biz">David Alvarez</maintainer>
  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
